sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of a vehicle is empty.
Error: Invalid departSpeed definition for vehicle '1'
Quitting (on error).
